samples/_failures_safe/1761224646_0e9739_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b948a4b1.c: In function ‘main’:
./samples/SAFE/__tmp_b948a4b1.c:139:9: error: expected expression at end of input
  139 |         } else if (choice ==
      |         ^
./samples/SAFE/__tmp_b948a4b1.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b948a4b1.c:139:9: error: expected declaration or statement at end of input
